[package]
name = "alpacaproxy"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.43"
argh = "0.1.6"
env_logger = {version="0.9.0", default_features=false}
http = "0.2.4"
http-serde = "1.0.3"
log = "0.4.14"
serde = "1.0.130"
serde_derive = "1.0.130"
serde_json = "1.0.67"
sled = "0.34.6"
tokio = {version="1.11.0", features=["macros","rt","time","sync", "net", "io-util"]}
tokio-tungstenite = "0.15.0"
