[package]
name = "alpacaproxy"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.43"
argh = "0.1.6"
env_logger = {version="0.9.0", default_features=false}
futures = "0.3.17"
hashbrown = "0.11.2"
http = "0.2.4"
log = "0.4.14"
serde = "1.0.130"
serde_derive = "1.0.130"
serde_json = "1.0.67"
sled = {version="0.34.6", features=["compression"]}
smol_str = "0.1.18"
tokio = {version="1.11.0", features=["macros","rt","time","sync", "net", "io-util"]}
tokio-tungstenite = {version="0.15.0", features=["rustls-tls"]}
url = { version = "2.2.2", features = ["serde"] }

[profile.release]
opt-level = "s"
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
incremental = false
panic = 'abort'
