[package]
version = "0.1.0"
name = "alpacaproxy-web-console"
authors = ["Vitaly _Vi Shukela <vi0oss@gmail.com>"]
description = "Stand-alone GUI tool to control AlpaxaProxy's web socket"
license = "MIT"
readme = "./README.md"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dev-dependencies]
wasm-bindgen-test = "0.3.18"

[dependencies]
seed = "0.8.0"
serde = "1.0.130"
serde_derive = "1.0.130"
serde_json = "1.0.67"
size_format = "1.0.2"
timeago = { version = "0.3.0", default-features = false }

[profile.release]
lto = true
opt-level = 'z'
codegen-units = 1

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-Os']
