[package]
version = "0.2.0"
name = "alpacaproxy-viewer"
authors = ["Vitaly _Vi Shukela <vi0oss@gmail.com>"]
description = "Stand-alone GUI tool visualize information from AlpaxaProxy's web socket"
license = "MIT"
readme = "./README.md"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dev-dependencies]
wasm-bindgen-test = "0.3.18"

[dependencies]
seed = "0.8.0"
serde = "1.0.130"
serde_derive = "1.0.130"
serde_json = "1.0.67"
size_format = "1.0.2"
time = {version="0.3.7", features=["serde-well-known","serde"]}
timeago = { version = "0.3.0", default-features = false }

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-Os']

